# monitor_net

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  ROADMAP.md  monitor_net.py  pyproject.toml  requirements.txt  run_monitor.bat  run_monitor.sh
.bmad-core/: core-config.yaml  install-manifest.yaml
.github/workflows/: release.yml
docs/: POST-MVP-ROADMAP.md  RELEASE_PROCESS.md  architecture.md  modernizar.md  prd.md
docs/architecture/: appendix-useful-commands-and-scripts.md  appendix-useful-commands.md  architecture-patterns-and-conventions.md  coding-standards.md  compatibility-requirements.md  data-models-and-apis.md  data-models-and-schema.md  development-and-deployment.md  enhancement-impact-analysis.md  enhancement-prd-provided-impact-analysis.md  high-level-architecture.md  index.md  integration-points-and-external-dependencies.md  introduction.md  next-steps.md  quick-reference-key-files-and-entry-points.md  security-and-privacy.md  source-tree-and-module-organization.md  target-architecture-modernization.md  technical-debt-and-known-issues.md  testing-reality.md  testing-strategy.md
docs/prd/: 1-intro-project-analysis-and-context.md  2-requirements.md  3-user-interface-enhancement-goals.md  4-technical-constraints-and-integration-requirements.md  5-epic-structure.md  7-story-sequence-summary.md  appendix-a-reference-documents.md  checklist-results-report.md  document-information.md  epic-1-foundation-sqlite-persistence-tab-navigation.md  epic-2-configuration-settings-tab.md  epic-2.theme-system.md  epic-3-reporting-export-reports-tab-admob.md  epic-3.multi-platform-validation-and-release.md  epic-4-polish-ux-improvements.md  epic-and-story-structure.md  epic-details.md  epic-list.md  goals-and-background-context.md  index.md  intro-project-analysis-and-context.md  next-steps.md  requirements.md  technical-assumptions.md  technical-constraints-and-integration-requirements.md  user-interface-design-goals.md  user-interface-enhancement-goals.md
docs/qa/assessments/: 2.1.css-variable-refactoring-nfr-20251206.md  (+1 more)
docs/references/: POST-MVP-ROADMAP.md  RELATORIO_MIGRACAO_TAURI.md  RELEASE_PROCESS.md
docs/stories/: 1.0.regression-test-suite.md  1.1.create-abstract-database-service-layer.md  1.1.environment-preparation-and-tauri-initialization.md  1.1.project-scaffolding-configuration.md  1.1.validation-report.md  1.2.5.implement-network-monitoring-logic.story.md  1.2.core-monitoring-service-implementation.story.md  1.2.implement-sqlite-schema-and-migrations.md  1.2.validation-report.md  1.3.electron-removal-and-project-cleanup.story.md  1.3.user-interface-implementation-home-screen.story.md  1.4.android-and-desktop-integration-verification.story.md  1.4.implement-tab-based-navigation-structure.md  1.4.production-build-configuration-and-verification.story.md  1.4.validation-report.md  1.5.add-data-retention-and-cleanup.md  2.1.css-variable-refactoring.story.md  2.2.theme-toggle-and-persistence.story.md  3.1.github-actions-cicd-configuration.story.md  3.2.mobile-release-build-pipeline.story.md  3.3.dod-report.md  3.3.v1.0-final-verification.story.md
netmonitor/: .browserslistrc  .gitignore  angular.json  capacitor.config.ts  ionic.config.json  karma.conf.js  package-lock.json  package.json  tsconfig.app.json  tsconfig.spec.json  vitest.config.ts
netmonitor/electron/: main.js
netmonitor/src-tauri/: Cargo.toml  tauri.conf.json
tests/: test_monitor_net.py
(+64 files in other folders)
