[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "net-latency-monitor"
version = "0.2.0"
description = "A real-time network latency monitor with terminal graphing, supporting Linux, macOS, and Windows."
readme = "README.md"
requires-python = ">=3.8" # Due to statistics.quantiles for percentile feature
license = {text = "MIT License"} # Assuming MIT, or specify file = "LICENSE" if one exists
authors = [
    {name = "The Net Latency Monitor Authors", email = "authors@example.com"}, # USER: Please update with your actual details
]
keywords = ["network", "latency", "ping", "monitor", "terminal", "plotext"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: System :: Monitoring",
    "Topic :: Terminals",
]

dependencies = [
    "plotext>=5.0.0" # Specify a reasonable minimum version for plotext if known, or just "plotext"
]

# Optional dependencies for development
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.0.0",
    "ruff>=0.1.6",
    "black>=22.0.0"
]

[project.scripts]
netmonitor = "monitor_net:main"

[project.urls]
"Homepage" = "https://github.com/user/net-latency-monitor"  # USER: Please update this URL
"Source" = "https://github.com/user/net-latency-monitor"    # USER: Please update this URL
"Bug Tracker" = "https://github.com/user/net-latency-monitor/issues" # USER: Please update this URL

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# Define the rules to explicitly ignore.
# E203: whitespace before ':' (often handled by Black)
# W503: line break before binary operator (PEP 8 now recommends after, Black enforces this)
ignore = ["E203", "W503"]
